package com.zsx.design.pattern.behavioral.iterator;

public interface Iterator<E> {

    boolean hasNext();

    E next();
}
